fix: disable angular runtime and deploy SPA correctly

--- a/frontend/netlify.toml
+++ b/frontend/netlify.toml
@@ -1,3 +1,7 @@
+[build]
+  command = "npm install && npx ng build"
+  publish = "dist/agrosoft-frontend"
+
 [[redirects]]
   from = "/*"
   to = "/index.html"
