fix: troca imagem java 8 para amazoncorretto

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,10 @@
-# Estágio 1: Build (Compilação do seu projeto)
-FROM maven:3.6.3-jdk-8 AS build
-WORKDIR /app
-# Copia o código para dentro do container
-COPY . .
-# Executa o build do Maven gerando o .jar
-RUN mvn clean package -DskipTests
+spring.datasource.url=${SPRING_URL:jdbc:postgresql://localhost:5432/agrosoft}
+spring.datasource.username=${SPRING_USER:postgres}
+spring.datasource.password=${SPRING_PASSWORD:admin}
 
-# Estágio 2: Execução (Roda o projeto)
-FROM openjdk:8-jdk-alpine
-WORKDIR /app
-# Copia apenas o .jar gerado no estágio anterior
-COPY --from=build /app/target/*.jar app.jar
-# Configuração de memória para não estourar o limite gratuito da Render
-ENV JAVA_OPTS="-Xmx300m -Xms300m"
-EXPOSE 8080
-# Comando para iniciar a aplicação
-ENTRYPOINT ["sh", "-c", "java $JAVA_OPTS -jar app.jar"]
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
