--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
-
+server.port=${PORT:8080}
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
